--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,12 @@
 
   --fz-primary-0_4: 0.4rem;
   --fz-primary-0_6: 0.6rem;
+  --fz-primary-0_8: 0.8rem;
   --fz-primary-1: 1rem;
   --fz-primary-1_2: 1.2rem;
   --fz-accent-2: 2rem;
+  --theme-background: rgb(237, 237, 237);
+  --theme-text: rgb(11, 11, 11);
 }
 
 * {
@@ -22,6 +25,7 @@
   margin: 0;
   padding: 0;
   font-family: var(--ff-primary);
+  color: var(--theme-text);
 }
 
 html, body {
@@ -29,7 +33,8 @@ html, body {
   scroll-behavior: smooth;
   min-height: 100vh;
   width: 100%;
-  background-color: var(--clr-primary-900);
+  background-color: var(--theme-background);
+  color: var(--theme-text);
   /* background-image: linear-gradient(rgba(0,0,0,0.9),rgba(0,0,0,0.9)),url(HHwallpaper.jpg); */
   background-position: center;
   background-attachment: fixed;
@@ -37,9 +42,24 @@ html, body {
   background-size: cover;
 }
 
+.dark-theme {
+  --theme-background: rgb(16, 15, 15);
+  --theme-text: rgb(237, 237, 237);
+}
+
 .red-text {
   color: var(--clr-primary-pink);
   text-decoration: none;
+}
+
+.white-text {
+  color: white;
+}
+
+hr {
+  height: 0.5px;
+  background-color: white;
+  border: none;
 }
 
 .container {
@@ -56,10 +76,6 @@ html, body {
   .right {
     left: 7rem;
   }
-}
-
-.white-text {
-  color: white;
 }
 
 .smaller-hr {
@@ -158,7 +174,7 @@ html, body {
 
 .arial {
   font-family: 'Arial', sans-serif;
-  font-size: var(--fz-primary-1);
+  font-size: var(--fz-primary-0_8);
 }
 .white {
   color:rgb(255, 255, 255)
@@ -173,7 +189,7 @@ html, body {
   gap: 2rem;
   padding: 0.5rem 2rem;
   position: fixed;
-  opacity: 0.9;
+  opacity: 0.88;
   margin-top: 0.5rem;
 }
 
@@ -315,6 +331,7 @@ nav .fa{
   margin: auto;
   text-align: center;
   padding-top: var(--fz-accent-2);
+  color: var(--theme-text);
 }
 
 .bio-info {
@@ -323,6 +340,7 @@ nav .fa{
   text-align: left;
   padding: 4rem;
   margin: 0.7rem;
+  color: var(--theme-text);
 }
 #NHphoto {
   width: 30%;
@@ -350,7 +368,7 @@ nav .fa{
 /*------ Music ------*/
 
 .music {
-  background:rgb(0, 0, 0);
+  background: --theme-background;
   width: 80%;
   margin: auto;
   text-align: center;
@@ -358,7 +376,7 @@ nav .fa{
 }
 
 h1{
-  color:rgb(255, 255, 232);
+  color: var(--theme-text);
   font-size: 36px;
   font-weight: 600;
 }
@@ -373,7 +391,7 @@ h1{
 
 
 p {
-  color: rgb(255, 226, 226);
+  color: var(--theme-text);
   font-size: 20px;
   font-weight: 300;
   line-height: 22px;
@@ -405,7 +423,7 @@ p {
 }
 
 h3 {
-  color:rgb(255, 255, 232);
+  color: var(--theme-text);
   text-align: center;
   font-weight: 600;
   margin: 10px 0;
@@ -459,7 +477,7 @@ h3 {
 }
 
 .videos {
-  background:rgb(0, 0, 0);
+  background: --theme-background;
   width: 100%;
   margin: auto;
   text-align: center;
@@ -540,13 +558,15 @@ h3 {
 
 .portfolio-col {
   flex: content;
-  background: #141414;
+  background: var(--theme-background);
+  border: solid white;
   border-radius: 10px;
   margin-bottom: 5%;
   padding: 10px 5px;
   box-sizing: border-box;
   transition: 0.5s;
   cursor: pointer;
+  color: var(--theme-text);
 }
 .portfolio-col img {
   height: 200px;
@@ -640,4 +660,130 @@ h3 {
     max-width: 200px;
     margin: auto;
   }
+}
+
+.header2-hero {
+  height: 100%;
+  position: relative;
+  margin-bottom: 5rem;
+  transition: 1s;
+}
+
+.header2-info {
+  margin-top: 8%;
+  margin-left: 15%;
+  transition: 1s;
+}
+.header2-info h1 {
+  font-size: 70px;
+  color: black;
+  transition: 1s;
+}
+
+.header2-info p {
+  color: black;
+  transition: 1s;
+}
+
+.header2-img-box {
+  width: 40%;
+  height: 80%;
+  right: 100px;
+  top: 170px;
+  position: absolute;
+}
+
+.header2-img-box img {
+  width: 310px;
+  height: 310px;
+  left: 50%;
+  position: absolute;
+  bottom: 0;
+  transform: translateX(-50%);
+  transition: bottom 1s, left 1s;
+  transition: 1s;
+  border-radius: 5%;
+}
+@media (max-width: 1200px) {
+  .header2-img-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    right: 70px;
+    top: 150px;
+  }
+  .header2-img-box img {
+    width: 150px;
+    height: 150px;
+  }
+}
+@media (max-width: 700px) {
+  .header2-img-box img {
+    display: none;
+  }
+  .header2-img-box {
+    position: inherit;
+  }
+  .header2-hero {
+    position: inherit;
+  }
+
+  .header2-info {
+    position: inherit;
+  }
+  .header2-info h1 {
+    position: inherit;
+  }
+
+  .header2-info p {
+    position: inherit;
+  }
+}
+
+.header2-img-box:hover .back-img {
+  bottom: 40px;
+  scale: 1.1;
+  transition: 1s;
+}
+.header2-img-box:hover .front-img{
+  left: 54%;
+  scale: 1.1;
+  transition: 1s;
+}
+.header2-info:hover {
+  font-size: 1.2rem;
+  transition: 1s;
+  color: black;
+}
+.header2-info h1:hover {
+  font-size: 5rem;
+  transition: 1s;
+  color: black;
+}
+.header2-info p:hover {
+  font-size: 1.4rem;
+  transition: 1s;
+  color: black;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.hero-button {
+  font-size: 1.3rem;
+  color: rgb(249, 96, 96);
+  text-decoration: none;
+  transition: 1s;
+}
+
+.hero-button:hover {
+  box-shadow: 0 0 30px 10px rgba(230, 103, 255, 0.2);
+  transition: 1s;
+}
+
+a:hover {
+  color: rgb(60, 0, 255);
+  transition: 1s;
 }
