--- a/src/index.css
+++ b/src/index.css
@@ -479,19 +479,6 @@ h3 {
 
 /*------ Videos ------*/
 
-.skeleton {
-    animation: skeleton-loading 1s linear infinite alternate;
-}
-
-@keyframes skeleton-loading {
-    0% {
-        background-color: hsl(276, 20%, 50%);
-    }
-    100% {
-        background-color: hsl(276, 20%, 80%);
-    }
-}
-
 .videos {
     background: --theme-background;
     width: 100%;
@@ -743,22 +730,25 @@ h3 {
 }
 
 @media (max-width: 1200px) {
-    .header2-img-box {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        right: 70px;
-        top: 150px;
-    }
     .header2-img-box img {
-        width: 250px;
-        height: 350px;
+        width: 450px;
+        height: 680px;
+        left: 60%;
     }
     .header2-hero {
         padding-top: 2rem;
     }
 }
+
+@media (max-width: 1100px) {
+    .header2-img-box img {
+        width: 350px;
+        height: 480px;
+        left: 60%;
+        bottom: 20%;
+    }
+}
+
 @media (max-width: 700px) {
     .header2-img-box img {
         display: none;
@@ -780,41 +770,41 @@ h3 {
     .header2-info p {
         position: inherit;
     }
-}
+    }
 
-.bold {
+    .bold {
     font-weight: bold;
-}
+    }
 
-.hero-button {
+    .hero-button {
     font-size: 1.3rem;
     color: rgb(249, 96, 96);
     text-decoration: none;
     transition: 1s;
-}
+    }
 
-.hero-button:hover {
+    .hero-button:hover {
     box-shadow: 0 0 30px 10px rgba(230, 103, 255, 0.2);
     transition: 1s;
-}
+    }
 
-.hero-button > a:hover {
+    .hero-button > a:hover {
     color: rgb(60, 0, 255);
     transition: 1s;
-}
+    }
 
-.language-selector {
+    .language-selector {
     position: relative;
     top: 0.1em;
     margin-left: 0.9rem;
-}
+    }
 
-.language-flag {
+    .language-flag {
     height: 1.2rem;
     width: 1.7rem;
     border-radius: 1%;
     margin: 0;
-}
-.language-flag:hover {
+    }
+    .language-flag:hover {
     cursor: pointer;
-}
+    }
