add container-left-align class for Portfolio.tsx ul-tags

--- a/src/index.css
+++ b/src/index.css
@@ -89,6 +89,10 @@ hr {
     align-items: center;
 }
 
+.container-left-align {
+    text-align: left;
+}
+
 .right {
     position: relative;
     left: 13rem;
