--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -19,7 +19,7 @@
 
 .bg-color-dark {
     background-color: var(--bg-color-dark);
-    color: var(--font-color-light)
+    color: var(--font-color-light);
 }
 
 .header-bg-color-dark {
@@ -32,7 +32,7 @@
 
 .bg-color-light {
     background-color: var(--bg-color-light);
-    color: var(--font-color-dark)
+    color: var(--font-color-dark);
 }
 
 .btn {
@@ -137,4 +137,27 @@
     transform: translateX(-100%);
     opacity: 0;
     transition: transform 500ms, opacity 500ms;
+}
+
+.logos {
+    will-change: filter;
+}
+
+.logos:hover {
+    filter: drop-shadow(0 0 2em #646cffaa);
+}
+
+@keyframes logos-spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+    a:nth-of-type(1) .logos {
+        animation: logos-spin infinite 20s linear;
+    }
 }
